start config container