@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.postgresql:postgresql'
 
@@ -33,7 +34,34 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 }
 
+sourceSets {
+	integrationTest {
+		java {
+			compileClasspath += main.output + test.output
+			runtimeClasspath += main.output + test.output
+			srcDir file('src/test/java')
+		}
+	}
+}
+
+tasks.register('integrationTest', Test) {
+	// to prevent Mockito's inline mock maker fail on container
+	jvmArgs('-Djdk.attach.allowAttachSelf=true', '-XX:+StartAttachListener')
+
+	description = 'Runs integration tests.'
+	group = 'verification'
+	useJUnitPlatform()
+	filter {
+		include '**/*IntegrationTest.*'
+	}
+}
+
 tasks.named('test') {
+	filter {
+		exclude '**/*IntegrationTest.*'
+	}
+	// to prevent Mockito's inline mock maker fail on container
+	jvmArgs('-Djdk.attach.allowAttachSelf=true', '-XX:+StartAttachListener')
 	useJUnitPlatform()
 }
 
